# cpp_eventhandler

./: CMakeLists.txt  LICENSE  README.md  WRAPUP.md
01_bigSwitch/: BIGSWITCH.md  CMakeLists.txt  main.cpp  windoweventfilter.cpp  windoweventfilter.h
02_functions/: CMakeLists.txt  FUNCTIONS.md  Main.qml  main.cpp  windoweventfilter.cpp  windoweventfilter.h
03_classes/: CLASSES.md  CMakeLists.txt  SelectionFrame.qml  dragmoveinputrule.cpp  dragmoveinputrule.h  lassoinputrule.cpp  lassoinputrule.h  main.cpp  selectioninputrule.cpp  selectioninputrule.h  windoweventfilter.cpp  windoweventfilter.h
04_inheritance/: CMakeLists.txt  INHERITANCE.md  abstractinputrule.cpp  abstractinputrule.h  dragmoveinputrule.cpp  dragmoveinputrule.h  inputinfo.h  inputrule.cpp  inputrule.h  inputrulemanager.cpp  inputrulemanager.h  inputrulemanagerfactory.cpp  inputrulemanagerfactory.h  lassoinputrule.cpp  lassoinputrule.h  main.cpp  selectioninputrule.cpp  selectioninputrule.h  windoweventfilter.cpp  windoweventfilter.h
05_multiinheritance/: CMakeLists.txt  MULTIINHERITANCE.md  dragmoveinputrule.cpp  dragmoveinputrule.h  eventhandler.h  eventinfo.h  inputinfo.cpp  inputinfo.h  inputrule.h  inputrulemanager.cpp  inputrulemanager.h  inputrulemanagerfactory.cpp  lassoinputrule.cpp  lassoinputrule.h  main.cpp  selectioninputrule.cpp  selectioninputrule.h  windoweventfilter.cpp  windoweventfilter.h
05_typeerasure/: CMakeLists.txt  inputinfo.cpp  inputinfo.h  inputrule.cpp  inputrulemanager.cpp  inputrulemanager.h  inputrulemanagerfactory.cpp  inputruleprivate.cpp  inputruleprivate.h  main.cpp  selectioneventhandler.cpp  selectioneventhandler.h  windoweventfilter.cpp  windoweventfilter.h
06_typeerasure/: CMakeLists.txt  TYPEERASURE.md  dragmoveeventhandler.cpp  dragmoveeventhandler.h  eventhandler.h  eventinfo.h  inputinfo.cpp  inputinfo.h  inputrule.cpp  inputrule.h  inputrulemanager.cpp  inputrulemanager.h  inputrulemanagerfactory.h  inputruleprivate.h  lassoeventhandler.cpp  lassoeventhandler.h  main.cpp
common/: commandlineparser.cpp  commandlineparser.h  itemdragoperation.cpp  itemdragoperation.h  lassoaccess.cpp  lassoaccess.h  lassoselectionoperation.cpp  lassoselectionoperation.h  selectionaccess.cpp  selectionaccess.h
